<resources>
    <string name="app_name">Cram_Baa</string>
    <!--homefragment-->
    <string name="homeActivity_homepage">首页</string>
    <string name="homeActivity_selection">选课</string>
    <string name="homeActivity_sign_in">签到</string>
    <string name="homeActivity_schedule">课表</string>
    <string name="homeActivity_my">我的</string>
    <!--selectionfragment-->
    <string name="all">全部</string>
    <string name="chinese">语文</string>
    <string name="math">数学</string>
    <string name="english">英语</string>c
    <string name="physics">物理</string>
    <string name="chemistry">化学</string>
    <string name="biology">生物</string>
    <string name="history">历史</string>
    <string name="geography">地理</string>
    <string name="political">政治</string>
</resources>
