<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title"
        android:background="@color/titlebackgroup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/homeActivity_selection"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/activity_title_btn" />
    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/all" />

            <Button
                android:id="@+id/btn_chinese"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/chinese" />

            <Button
                android:id="@+id/btn_math"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/math" />

            <Button
                android:id="@+id/btn_english"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/english" />

            <Button
                android:id="@+id/btn_physics"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/physics" />

            <Button
                android:id="@+id/btn_chemistry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/chemistry" />

            <Button
                android:id="@+id/btn_biology"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/biology" />

            <Button
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/history" />

            <Button
                android:id="@+id/btn_geography"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/geography" />

            <Button
                android:id="@+id/btn_political"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/touming"
                android:text="@string/political" />
        </LinearLayout>
    </HorizontalScrollView>

    <com.example.cram_baa.util.NoScrollViewPager
        android:id="@+id/selectpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout" />
</LinearLayout>