<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linearLayout3">

        <ImageView
            android:id="@+id/iv_system"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:scaleType="fitXY"
            android:src="@color/titlebackgroup" />
    </LinearLayout>

    <com.example.cram_baa.util.NoScrollViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout3"
        android:layout_above="@+id/linearLayout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/pager"
        android:background="@color/gray" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lv_homepage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_homepage"
                android:layout_width="@dimen/activity_home_dibudaohang_size"
                android:layout_height="@dimen/activity_home_dibudaohang_size"
                android:layout_gravity="center"
                android:src="@drawable/btn_homepage" />

            <TextView
                android:id="@+id/tv_homepage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/homeActivity_homepage"
                android:textColor="@color/dibudaohang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_store"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_selection"
                android:layout_width="@dimen/activity_home_dibudaohang_size"
                android:layout_height="@dimen/activity_home_dibudaohang_size"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/btn_selection" />

            <TextView
                android:id="@+id/tv_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/homeActivity_selection"
                android:textColor="@color/dibudaohang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_sign_in"
                android:layout_width="@dimen/activity_home_dibudaohang_size"
                android:layout_height="@dimen/activity_home_dibudaohang_size"
                android:layout_gravity="center"
                android:src="@drawable/btn_sign_in" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/homeActivity_sign_in"
                android:textColor="@color/dibudaohang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_schedule"
                android:layout_width="@dimen/activity_home_dibudaohang_size"
                android:layout_height="@dimen/activity_home_dibudaohang_size"
                android:layout_gravity="center"
                android:padding="3dp"
                android:src="@drawable/btn_schedule" />

            <TextView
                android:id="@+id/tv_schedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/homeActivity_schedule"
                android:textColor="@color/dibudaohang" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lv_my"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_my"
                android:layout_width="@dimen/activity_home_dibudaohang_size"
                android:layout_height="@dimen/activity_home_dibudaohang_size"
                android:layout_gravity="center"
                android:src="@drawable/btn_my" />

            <TextView
                android:id="@+id/tv_my"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/homeActivity_my"
                android:textColor="@color/dibudaohang" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>